# Automation_testing_final_project

./: README.md  pyproject.toml  report.html
pages/: base_page.py  check_out_complete_locators.py  check_out_complete_page.py  check_out_page.py  check_out_page_locators.py  log_out_page.py  log_out_page_locators.py  login_page.py  login_page_locators.py  login_success_locators.py  login_success_page.py  product_page.py  product_page_locators.py  shopping_cart_locators.py  shopping_cart_page.py
resources/: constants.py
tests/: conftest.py  test_products.py  test_user_login.py  test_utils.py
