[project]
name = "testsaucedemowebsiteproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
[tool.poetry.dependencies]
python = "3.12.3"
selenium = "^4.11.2"
pytest = "8.3.4"
junit-xml = "1.9"
pytest-html = "4.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
